--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-  <h2 class='text-center my-4'>「アプリ名」とは</h2>
+  <h2 class='text-center my-4'>「トレコミグラフ」とは</h2>
 
   <div class='row my-3'>
     <div class='col-md-6 my-auto'>
