--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -24,7 +24,7 @@ p{
   border-radius: 10px;/*角の丸み*/
 }
 .traffic u {
-  margin: 0; 
+  margin: 0;
   padding: 0;
 }
 
@@ -36,3 +36,11 @@ p{
 .description{
   text-align: center;
 }
+
+.icon {
+   width: auto;
+   max-width: 100%;
+   height: 80px;
+   object-fit: contain;
+   margin: 20px auto;
+ }
