--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -73,17 +73,14 @@
             <h4 class='about'>投稿が反映されます！</h4>
             <br><br>
           </div>
-          <p>
-            混み具合は５段階で。時間は1時間ごとに表示されるので、通勤やお出かけの際にチェックすると便利です！
-          <p>・・アイコンを並べる予定・・・・・・</p>
+          <p>混み具合は５段階で。時間は1時間ごとに表示されるので、通勤やお出かけの際にチェックすると便利です！</p>
           <div class='row d-flex justify-content-center'>
-            <ul class='list-group list-group-horizontal'>
-              <li>混んでる</li>
-              <li class='mx-4'>混んでない</li>
-              <li>普通</li>
-            </ul>
+              <%= image_tag "混雑1.jpg", alt:"混雑1", class:"icon" %>
+              <%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon" %>
+              <%= image_tag "混雑3.jpg", alt:"混雑3", class:"icon" %>
+              <%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon" %>
+              <%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon" %>
           </div>
-          <p>・・・・・・・・・・・・・・・・・・・</p>
           <br>
           <p>ユーザーからの投稿がリアルタイムで反映されていくので、電車の状況が分かります。</p>
 
