--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -44,4 +44,12 @@ p{
   object-fit: contain;
   margin: 20px auto;
   filter: opacity(20%);
+
+}
+.icon-about {
+  width: auto;
+  max-width: 100%;
+  height: 90px;
+  object-fit: contain;
+  margin: 20px auto;
 }
