--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -75,11 +75,11 @@
           </div>
           <p>混み具合は５段階で。時間は1時間ごとに表示されるので、通勤やお出かけの際にチェックすると便利です！</p>
           <div class='row d-flex justify-content-center'>
-              <%= image_tag "混雑1.jpg", alt:"混雑1", class:"icon" %>
-              <%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon" %>
-              <%= image_tag "混雑3.jpg", alt:"混雑3", class:"icon" %>
-              <%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon" %>
-              <%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon" %>
+              <%= image_tag "混雑1.jpg", alt:"混雑1", class:"icon-about" %>
+              <%= image_tag "混雑2.jpg", alt:"混雑2", class:"icon-about" %>
+              <%= image_tag "混雑3.jpg", alt:"混雑3", class:"icon-about" %>
+              <%= image_tag "混雑4.jpg", alt:"混雑4", class:"icon-about" %>
+              <%= image_tag "混雑5.jpg", alt:"混雑5", class:"icon-about" %>
           </div>
           <br>
           <p>ユーザーからの投稿がリアルタイムで反映されていくので、電車の状況が分かります。</p>
